# camcap

./: .gitignore  .pylintrc  4.py  main.py  pyproject.toml  sql
app/: jsonchat.py  online_status.py
app/config/: settings.py
app/database/: createtables.sql  dbactions.py
app/errors/: capture_errors.py  custom_errors.py  uivalidations.py
app/log/: logger.py  logger_config.json
app/sites/: capture_streamer.py  chaturbate_streamer.py  create_streamer.py  getstreamerurl.py
app/ui/: commandline.py
app/utils/: constants.py
