[tool.poetry]
name = "abox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = {extras = ["http2"], version = "^0.27.2"}
termcolor = "^2.4.0"
tabulate = "^0.9.0"
pydantic-settings = "^2.5.2"
send2trash = "^1.8.3"
numpy = "^2.1.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
